{
    "name": "Joystick_controller",
    "maps": [
        {
            "name": "Movements",
            "id": "16df3fc6-522a-4f3b-bc02-8d15c59452b4",
            "actions": [
                {
                    "name": "Go_forward",
                    "type": "Value",
                    "id": "1aef144a-e21d-4f01-a270-5371c22b0bef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Go_backward",
                    "type": "Button",
                    "id": "b2596b6e-6f34-4ae2-a168-726750b292ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Deflect",
                    "type": "Value",
                    "id": "9656be69-2e84-4cc9-9308-dda8460c53ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Torque_right",
                    "type": "Value",
                    "id": "a7dd07a2-c249-40ad-846e-05f479702306",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Torque_left",
                    "type": "Value",
                    "id": "9f40ae72-f689-48c0-aa2a-0a7921e55a95",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Activate",
                    "type": "Button",
                    "id": "ddffd138-655f-4272-8c10-1d731e2c81f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Capture",
                    "type": "Button",
                    "id": "5a5405ca-1644-4245-b40f-dec43cb536f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Speed_up",
                    "type": "Button",
                    "id": "f178ba5a-558c-4eda-9fc3-d9343e8c322c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Speed_down",
                    "type": "Button",
                    "id": "4e94bcb5-7333-4eaf-b102-9c0c3cafdef7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "86b507ba-44ab-48ce-a690-4da2165612e6",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Go_forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9542becd-e9ff-4a16-8b35-519a900261f9",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Go_backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10629ad8-60b2-4792-8dd9-3e5ecb721319",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Torque_right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b8a2de8-88fb-4805-8b5e-e3379b6e69d7",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Torque_left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3225c9e-3a58-4f07-9677-d516a9fc88b5",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deflect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d60c027e-992e-4b74-b23f-5ad6712081ea",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Activate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5a9beda-eddb-40a7-a510-cab4def121dc",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capture",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d22ed128-9ee8-4367-815f-772a6cf1fe27",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speed_up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ebbeb28-300a-43a5-acc2-5fd2e9c7f83a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speed_down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}